# leapfrog-goals-test

./: .gitignore  README.md  app.py  goals_extract_config.EX  pyproject.toml
scripts/: run_extract.py  run_goals_model.py
src/leapfrog_compare/: config.py  extract_reader.py  indicator_map.py  pjnz_runner.py  spectrum.py
