[project]
name = "leapfrog-compare"
version = "0.0.1"
description = "Compare Spectrum extract output with leapfrog-goals model output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "shiny>=1.2",
    "plotly>=5.0",
    "leapfrog-goals",
]

[tool.uv.sources]
leapfrog-goals = { path = "../leapfrog/goals" }

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"
